<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrowdTasker</string>
    <string name="settings">Settings</string>
    
    
    <string name="pref_range_radius">pref_range_radius</string>
    <string name="pref_range_unit">pref_range_unit</string>
    <string name="pref_nearest_tasks">pref_nearest_tasks</string>
    <string name="pref_username">pref_username</string>
    <string name="pref_userid">pref_userid</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log out</string>
        
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="worker">Worker</string>
    <string name="worker_semicolon">Worker:</string>
    <string name="tasker">Tasker</string>
    <string name="tasker_semicolon">Tasker:</string>
    <string name="new_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    
    <string name="new_task_header">New Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    
    <string name="task_name_hint">Task name&#8230;</string>
    <string name="task_description_hint">Task description&#8230;</string>
    <string name="task_deadline_hint">Deadline&#8230;</string>
    <string name="task_payment_hint">Payment&#8230;</string>
    <string name="task_pickup_loc_hint">Pick up location&#8230;</string>
    <string name="task_dropoff_loc_hint">Drop off location&#8230;</string>
    
    
   	<string name="enter_correct_deadline_error">Please enter a correct deadline date</string>
    <string name="enter_correct_payment_error">Please enter a correct payment amount</string>
   	<string name="task_create_success">Task successfully created</string>
    <string name="task_update_success">Task successfully updated</string>
   	<string name="task_create_error">An error occurred while creating task</string>
    <string name="task_update_error">An error occurred while updating task</string>
   	
	<string name="select_deadline_date">Select deadline date</string>
	<string name="select_deadline_time">Select deadline time</string>
	<string name="pick_location">Pick location</string>
	<string name="pickup_loc_header">Pick up location</string>
	<string name="dropoff_loc_header">Drop off location</string>
	<string name="dropoff">Drop off</string>
		
	<string name="location_range_settings">Location range settings</string>
	<string name="location_range_settings_desc">Set the maximum radius to update data around your location.</string>
	
	<string name="nearest_tasks_settings">Nearest tasks settings</string>
	<string name="nearest_tasks_settings_desc">Set the maximum number of nearest tasks to show around your location.</string>
	
	<string name="max_load_radius">Maximum loading radius</string>
	<string name="max_load_radius_desc">The tasks will be loaded inside the given radius</string>

	<string name="max_nearest_tasks">Maximum number of nearest tasks</string>
	<string name="max_nearest_tasks_desc">At most the given number of tasks will be loaded around your location</string>
	
	<string name="username_hint">Username&#8230;</string>
	<string name="password_hint">Password&#8230;</string>
	<string name="username">Username</string>
	<string name="login">Log In</string>
	<string name="register">Register</string>
	<string name="password_repeat_hint">Repeat password&#8230;</string>
	<string name="email_hint">E-mail&#8230;</string>
	<string name="login_incorrect">Username or password are incorrect</string>
	
	<string name="fill_required">Please fill out all required fields</string>
	<string name="pass_dont_match">Passwords do not match</string>
	
	<string name="register_success">Successfully registered! Please log in.</string>
	<string name="register_failed">Registration failed: User already exists.</string>
	
	<string name="task_status_changed">Task status changed</string>
	<string name="task_status_changed_msg">The status of the task \'%1$s\' has changed to \'%2$s\'</string>
	<string name="details">Details</string>
	
	<string name="task">Task</string>
	<string name="payment">Payment:</string>
	<string name="deadline">Deadline:</string>
	<string name="dropoff_loc">Drop-off location</string>
	<string name="pickup_loc">Pick-up location</string>
	<string name="description">Description</string>
	
	<string name="not_assigned">Not assigned</string>
	
	<string name="action_edit_task">Edit task</string>
	<string name="action_delete_task">Delete task</string>
	
	<string name="delete_task_dialog_title">Delete task</string>
	<string name="delete_task_dialog_msg">Are you sure you want to delete this task?</string>
	<string name="delete_task_dialog_cancel">The task cannot be deleted as it has been accepted by a worker. Do you want to cancel the task instead?</string>
	
	<string name="task_delete_success">Task successfully deleted</string>
	<string name="task_delete_error">Task could not be deleted</string>
	
	<string name="task_cancel_success">Task successfully canceled</string>
	<string name="task_cancel_error">Task could not be canceled</string>
	
	<string name="task_status">Task status</string>
	<string name="profile">Profile</string>
	<string name="first_name_hint">First Name&#8230;</string>
	<string name="last_name_hint">Last Name&#8230;</string>
	
	<string name="profile_update_success">Profile successfully updated.</string>
	<string name="profile_update_error">Error: profile could not be updated.</string>
	<string name="loading_tasks">Loading tasks&#8230;</string>
	<string name="loading_task">Loading task&#8230;</string>
	<string name="loading_task_status">Loading task status&#8230;</string>
	<string name="saving_profile">Saving profile&#8230;</string>
	<string name="saving_task">Saving task&#8230;</string>
	<string name="rate_task">Rate it!</string>
	
	<string name="task_rate_error">Error: rating could not be updated</string>
	
	<string name="no_tasks">No tasks&#8230;</string>
	<string name="loading_profile">Loading profile&#8230;</string>
	<string name="profile_pic_error">Error: Profile picture could not be uploaded</string>
	<string name="task_fill_out_error">Please fill out all fields</string>
	
</resources>
