<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

     
    <TextView android:id="@+id/username"
			  android:layout_width="wrap_content" android:layout_height="wrap_content" 
	          android:layout_marginBottom="5dp" 
    	      android:textAppearance="?android:attr/textAppearanceLarge"
    	      android:textStyle="bold"
	       	  android:layout_alignParentTop="true"
    	      android:singleLine="true"/>
    
    <RatingBar android:id="@+id/rating_bar"  
          android:layout_width="wrap_content" android:layout_height="wrap_content" 
          android:layout_below="@+id/username" />
			    
    <EditText android:hint="@string/first_name_hint" android:id="@+id/first_name"
			  android:layout_width="match_parent" android:layout_height="wrap_content" 
	          android:layout_marginBottom="3dp"	          
	          android:layout_below="@+id/rating_bar" 
    	      android:singleLine="true"/>
    
      <EditText android:hint="@string/last_name_hint" android:id="@+id/last_name"
			  android:layout_width="match_parent" android:layout_height="wrap_content" 
	          android:layout_marginBottom="3dp" 
	          android:layout_below="@+id/first_name" 
    	      android:singleLine="true"/>
   
     <EditText android:hint="@string/email_hint" android:id="@+id/email"
			  android:layout_width="match_parent" android:layout_height="wrap_content" 
	          android:layout_marginBottom="3dp" 
	          android:layout_below="@+id/last_name" 
    	      android:singleLine="true"
    	      android:inputType="textEmailAddress"/>
  
     
    <Button android:text="@string/save" android:id="@+id/save_btn" 
	        android:layout_width="200dp" android:layout_height="wrap_content" 
	        android:layout_below="@+id/email" 
	        android:layout_alignParentRight="true"
	        android:paddingLeft="25dp" android:paddingRight="25dp"/>     
</RelativeLayout>

    
    
