<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/map_wrapper" >


        <fragment
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            class="com.google.android.gms.maps.SupportMapFragment" 
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:id="@+id/task_details_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:padding="8dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:clickable="true"
			android:descendantFocusability="afterDescendants"
			android:focusable="true"
			android:focusableInTouchMode="true" >
<!-- 
            <ScrollView
                android:id="@+id/left_panel"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
 -->
                    <TextView
                        android:id="@+id/taskName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/task"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" 
                        android:layout_alignParentTop="true"/>

                    <TextView
                        android:id="@+id/taskDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:text="@string/description" 
                        android:layout_below="@+id/taskName"/>

                    <LinearLayout
                        android:id="@+id/deadline_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:orientation="horizontal"
                        android:layout_below="@+id/taskDescription" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/deadline"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/deadline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/payment_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/deadline_wrapper"
                        android:layout_marginBottom="1dp"
                        android:orientation="horizontal"  >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/payment"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/payment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tasker_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/payment_wrapper"
                        android:layout_marginBottom="1dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:text="@string/tasker_semicolon"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tasker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
 					
 					<ImageView
                         android:id="@+id/tasker_picture"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="3dp"
                         android:src="@drawable/profile_pic_placeholder" 
                         android:layout_below="@+id/actionBtn_wrapper"
                         android:layout_alignParentRight="true"/>
 					
 					<RatingBar android:id="@+id/tasker_rating_bar"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="3dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="3dp"
                                android:layout_below="@+id/tasker_wrapper"
                                />

               <!--                                 
                </RelativeLayout>
            </ScrollView>
             -->

         <!--    <LinearLayout
                android:id="@+id/right_panel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_alignParentRight="true" >
 -->
 				<FrameLayout android:id="@+id/actionBtn_wrapper"
 				    android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                  	android:layout_alignParentTop="true"
	                android:layout_alignParentRight="true">
	                <Button
	                    android:id="@+id/accpetTaskBtn"
	                    android:layout_width="100dp"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:background="@drawable/green_button"
	                    android:text="ACCEPT"
	                    android:textColor="@android:color/white"
	                />
	
	                <Button
	                    android:id="@+id/declineTaskBtn"
	                    android:layout_width="100dp"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:background="@drawable/red_button"
	                    android:text="ABORT"
	                    android:textColor="@android:color/white"
	                    android:visibility="gone" />
				</FrameLayout>
                <TextView
                    android:id="@+id/timerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" 
                    android:layout_alignParentRight="true" 
                    android:layout_below="@+id/payment_wrapper"
                    android:visibility="gone"/>
          <!--   </LinearLayout> -->
        </RelativeLayout>

</RelativeLayout>